fix(formatting): css spacing adjusted

--- a/src/components/Recipes/RecipeItem.css
+++ b/src/components/Recipes/RecipeItem.css
@@ -40,16 +40,28 @@ body {
 }
 
 .button {
-  border: none;
-  box-shadow: none;
-  font-family: inherit;
-  background-color:lightblue;
-  color: blue;
-  font-size: 15px;
-  transition:.25s;
-  cursor: pointer;
+box-shadow: inset 0px 1px 0px 0px #bee2f9;
+background: linear-gradient(to bottom, #63b8ee 5%, #468ccf 100%);
+background-color: #63b8ee;
+border-radius: 6px;
+border: 1px solid #3866a3;
+display: inline-block;
+cursor: pointer;
+color: #14396a;
+font-family: Arial;
+font-size: 15px;
+font-weight: bold;
+padding: 6px 24px;
+text-decoration: none;
+text-shadow: 0px 1px 0px #7cacde;
 }
 
 .button:hover {
-  transform: translate(10px, 0);
+background: linear-gradient(to bottom, #468ccf 5%, #63b8ee 100%);
+background-color: #468ccf;
 }
+
+.button:active {
+position: relative;
+top: 1px;
+} 
